--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: Build and Push Docker Image
 
 on:
   push:
@@ -7,11 +7,20 @@ on:
 
 jobs:
   docker-build:
-    runs-on:ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+      
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
 
       - name: Build Docker Image
-        run: docker build -t kidsbeds-app .
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/kidsbeds-app:latest .
+
+      - name: Push Image
+        run: docker push ${{secrets.DOCKER_USERNAME}}/kidsbeds-app:latest
