--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,21 +6,19 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Build Docker Image
-        run: docker build -t web-test:ci .
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Run Container
-        run: |
-          docker run -d -p 8084:80 --name test-container web-test:ci
-          sleep 5
+      - name: Build Image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/web-test:v1 .
 
-      - name: Validate App Running
-        run: curl -f http://localhost:8084 || exit 1
+      - name: Push Image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/web-test:v1
 
