--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,35 @@
 version: "3.8"
 
 services:
-  ecommerce-app:
+
+  kidsbeds-app:
     build: .
-    container_name: ecommerce-container
+    container_name: kidsbeds-container
+    env_file:
+      - .env
     ports:
-      - "8082:80"
+      - "8081:80"
+    depends_on:
+      - postgres
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: ${POSTGRES_DB}
+      DB_USER: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
     restart: always
+
+  postgres:
+    image: postgres:15-alpine
+    container_name: postgres1-container
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    restart: always
+
+volumes:
+  postgres-data:
 
